--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
+    "better-react-spinkit": "^2.0.4",
+    "email-validator": "^2.0.4",
+    "firebase": "^8.9.1",
+    "firebase-admin": "^11.0.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^3.0.5",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
