--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "email-validator": "^2.0.4",
     "firebase": "^8.9.1",
     "firebase-admin": "^11.0.0",
+    "moment": "^2.29.4",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^3.0.5",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "timeago-react": "^3.0.5"
   },
   "devDependencies": {
     "eslint": "8.19.0",
